--- a/styles/general.scss
+++ b/styles/general.scss
@@ -1,3 +1,7 @@
+ul {
+  list-style: none;
+}
+
 header {
   height: 300px;
   background: linear-gradient(305deg, #dbfff3, transparent);
@@ -70,7 +74,7 @@ main {
 }
 
 .about_us_list {
-  diplay: flex;
+  display: flex;
   flex-direction: column;
 }
 
@@ -90,4 +94,21 @@ main {
   color: white;
   text-transform: uppercase;
   text-shadow: 1px 1px 20px black;
+}
+
+.cat_services {
+  width: 100%;
+  .content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    width: 100%;
+    justify-content: flex-start;
+    .card {
+      display: flex;
+      flex-direction: column;
+      width: 30%;
+    }
+  }
 }
