--- a/styles/general.scss
+++ b/styles/general.scss
@@ -112,3 +112,15 @@ main {
     }
   }
 }
+.card > h2 {
+  font-size: 20px;
+  padding: 1rem;
+  line-height: 18px;
+}
+
+.card > p {
+  height: 200px;
+  line-height: 20px;
+  padding: 0.5rem;
+  text-align: left;
+}
