--- a/styles/general.scss
+++ b/styles/general.scss
@@ -5,6 +5,7 @@ ul {
 header {
   height: 300px;
   background: linear-gradient(305deg, #dbfff3, transparent);
+  padding: 15px 30px;
 }
 header > div {
   width: 100%;
