--- a/styles/general.scss
+++ b/styles/general.scss
@@ -202,7 +202,7 @@
   }
 }
 
-// Header CSS
+// Header/Top Main Page CSS
 .app__header-h1 {
   font-family: var(--font-base);
   color: blueviolet;
@@ -242,7 +242,51 @@
   }
 }
 
-// Video CSS
+// Bottom Main/home-page CSS
+.home_body {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.card {
+  flex: 1;
+  width: 100%;
+  height: 315px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
+  background: lightblue;
+  flex-direction: row;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.card:nth-child(even) {
+  direction: rtl;
+}
+.image {
+  display: flex;
+  max-width: 100%;
+
+  justify-content: center;
+  border-radius: 15px;
+}
+
+.content {
+  font-size: 18px;
+  padding: 2rem;
+  color: black;
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  .card {
+    flex-direction: column;
+  }
+}
+
+// Additional (need to sort) CSS
 ul {
   list-style: none;
 }
@@ -291,28 +335,6 @@ main {
   margin: auto;
   padding: 80px 30px;
   min-height: 550px;
-}
-.home_body {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-.image {
-  width: 40%;
-}
-.card {
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-}
-.card:nth-child(even) {
-  direction: rtl;
-}
-.content {
-  width: 50%;
 }
 
 .about_us_list {
