--- a/styles/general.scss
+++ b/styles/general.scss
@@ -4,12 +4,15 @@
 }
 .p__opensans {
   font-family: var(--font-alt);
-  color: var(--color-white);
+  color: whitesmoke;
+  background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
   font-weight: 400;
   letter-spacing: 0.04em;
   text-transform: capitalize;
   line-height: 28px;
-  font-size: 16px;
+  font-size: 18px;
+  //text-shadow: 0 0 3px #ff0000, 0 0 5px #0000ff;
+  text-shadow: 2px 2px 4px #000000;
 }
 .app__wrapper {
   display: flex;
@@ -82,7 +85,8 @@
   align-content: center;
   width: 100%;
   padding: 1rem 2rem;
-  border: 2px white solid;
+  border: 2px whitesmoke solid;
+  background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
 }
 .app__navbar-logo {
   display: flex;
@@ -97,8 +101,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
   list-style: none;
+  background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
 }
 .app__navbar-links li {
   margin: 0 1rem;
@@ -120,10 +124,6 @@
   transition: 0.5s ease;
 }
 
-.app__navbar-login Link:hover {
-  border-bottom: 1px solid var(--color-golden);
-}
-
 .app__navbar-login div {
   width: 1px;
   height: 30px;
@@ -139,8 +139,9 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: var(--color-black);
+  background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
   transition: 0.5s ease;
+  text-shadow: 2px 2px 4px #000000;
 
   flex-direction: column;
   z-index: 5;
@@ -148,25 +149,28 @@
 
 .app__navbar-smallscreen_overlay .overlay__close {
   font-size: 27px;
-  color: blueviolet;
+  color: whitesmoke;
   cursor: pointer;
 
   position: absolute;
   top: 20px;
   right: 20px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 .app__navbar-smallscreen_links {
   list-style: none;
+  background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
 }
 
 .app__navbar-smallscreen_links li {
   margin: 2rem;
   cursor: pointer;
-  color: blueviolet;
+  color: whitesmoke;
   font-size: 2rem;
   text-align: center;
   font-family: var(--font-base);
+  background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
 }
 
 .app__navbar-smallscreen_links li:hover {
@@ -209,12 +213,15 @@
 }
 .app__header-h1 {
   font-family: var(--font-base);
-  color: blueviolet;
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: capitalize;
   line-height: 117px;
   font-size: 90px;
+
+  background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .app__header-img Image {
   width: 80%;
@@ -263,10 +270,11 @@
   justify-content: center;
   align-items: center;
   font-size: 17px;
-  background: lightblue;
   flex-direction: row;
   padding: 1rem;
   border-radius: 1rem;
+  border: 2px solid white;
+  background: linear-gradient(#e66465, #9198e5);
 }
 
 .card:nth-child(even) {
@@ -275,7 +283,6 @@
 .image {
   display: flex;
   max-width: 100%;
-
   justify-content: center;
   border-radius: 15px;
 }
@@ -283,7 +290,7 @@
 .content {
   font-size: 18px;
   padding: 2rem;
-  color: black;
+  color: white;
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   .card {
