--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,9 @@
 }
 html,
 body {
+  background-color: #333;
+  z-index: -1;
 }
-
 a {
   color: unset;
   text-decoration: none;
@@ -23,7 +24,6 @@ a {
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
-  //background-color: yellow;
 }
 
 .slide-bottom {
@@ -50,15 +50,5 @@ a {
   100% {
     -webkit-transform: translateY(0);
     transform: translateY(0);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
   }
 }
