--- a/styles/general.scss
+++ b/styles/general.scss
@@ -10,116 +10,7 @@ body::before {
   }
 }
 
-// // App CSS
-// .section__padding {
-//   padding: 4rem 6rem;
-// }
-// .p__opensans {
-//   font-family: var(--font-alt);
-//   color: whitesmoke;
-//   background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
-//   font-weight: 400;
-//   letter-spacing: 0.04em;
-//   text-transform: capitalize;
-//   line-height: 28px;
-//   font-size: 18px;
-//   //text-shadow: 0 0 3px #ff0000, 0 0 5px #0000ff;
-//   text-shadow: 2px 2px 4px #000000;
-// }
-// .app__wrapper {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-
-//   min-height: 50vh;
-// }
-// .app__wrapper_info {
-//   flex: 1;
-//   width: 100%;
-//   display: flex;
-//   justify-content: center;
-//   align-items: flex-start;
-//   flex-direction: column;
-// }
-// .app__wrapper_img {
-//   flex: 1;
-//   width: 100%;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-
-//   margin-left: 2rem;
-// }
-// .app__wrapper_img Image {
-//   width: 80%;
-// }
-// @media screen and (min-width: 2000px) {
-//   .p__opensans {
-//     font-size: 30px;
-//     line-height: 50px;
-//   }
-// }
-// @media screen and (max-width: 1150px) {
-//   .app__wrapper {
-//     flex-direction: column;
-//   }
-
-//   .app__wrapper_img {
-//     margin: 5rem 0 0 0;
-//   }
-//   .app__wrapper_img Image {
-//     width: 100%;
-//   }
-// }
-// @media screen and (max-width: 850px) {
-//   .section__padding {
-//     padding: 4rem;
-//   }
-// }
-// @media screen and (max-width: 650px) {
-//   .section__padding {
-//     padding: 4rem 2rem;
-//   }
-//   .p__opensans {
-//     font-size: 14px;
-//   }
-// }
-// @media screen and (max-width: 450px) {
-//   .p__opensans {
-//     font-size: 12px;
-//   }
-// }
-
 // Navbar CSS
-// .app__navbar {
-//   position: relative;
-//   display: flex;
-//   flex-wrap: wrap;
-//   align-items: center;
-//   justify-content: space-between;
-//   //padding: 5rem 0;
-
-//   align-content: center;
-//   width: 100%;
-//   padding: 1rem 2rem;
-//   border: 2px whitesmoke solid;
-//   background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
-// }
-// .app__navbar-logo {
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: center;
-//   // width: 80%;
-// }
-// .container {
-//   width: 80%;
-//   margin: auto;
-//   overflow: hidedn;
-// }
-
-// .app__navbar-logo Image {
-//   width: 150px;
-// }
 
 .app__navbar-links {
   flex: 1;
@@ -195,12 +86,12 @@ body::before {
   color: whitesmoke;
   font-size: 2rem;
   text-align: center;
-  font-family: var(--font-base);
+  //font-family:
   background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
 }
 
 .app__navbar-smallscreen_links li:hover {
-  color: var(--color-white);
+  color: white;
 }
 
 @media screen and (min-width: 2000px) {
@@ -232,240 +123,6 @@ body::before {
     width: 110px;
   }
 }
-
-// // Header/Top Main Page CSS
-// .home_wrapper {
-//   border: 2px white solid;
-// }
-// .app__header-h1 {
-//   font-family: var(--font-base);
-//   font-weight: 700;
-//   letter-spacing: 0.04em;
-//   text-transform: capitalize;
-//   line-height: 117px;
-//   font-size: 90px;
-
-//   background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
-//   background-clip: text;
-//   -webkit-text-fill-color: transparent;
-// }
-// .app__header-img Image {
-//   width: 80%;
-// }
-// @media screen and (min-width: 2000px) {
-//   .app__header-h1 {
-//     font-size: 180px;
-//     line-height: 210px;
-//   }
-// }
-
-// @media screen and (max-width: 1150px) {
-//   .app__header-h1 {
-//     font-size: 90px;
-//   }
-// }
-
-// @media screen and (max-width: 650px) {
-//   .app__header-h1 {
-//     font-size: 70px;
-//     line-height: 87px;
-//   }
-// }
-
-// @media screen and (max-width: 450px) {
-//   .app__header-h1 {
-//     font-size: 50px;
-//     line-height: 70px;
-//   }
-// }
-
-// // Bottom Main/home-page CSS
-// .home_body {
-//   display: flex;
-//   flex-wrap: wrap;
-//   flex-direction: column;
-//   gap: 50px;
-//   border: 2px white solid;
-// }
-
-// .card {
-//   flex: 1;
-//   width: 100%;
-//   height: 315px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   font-size: 17px;
-//   flex-direction: row;
-//   padding: 1rem;
-//   border-radius: 1rem;
-//   border: 2px solid white;
-//   background: linear-gradient(#e66465, #9198e5);
-// }
-
-// .card:nth-child(even) {
-//   direction: rtl;
-// }
-// .image {
-//   display: flex;
-//   max-width: 100%;
-//   justify-content: center;
-//   border-radius: 15px;
-// }
-
-// .content {
-//   font-size: 18px;
-//   padding: 2rem;
-//   color: white;
-// }
-// @media only screen and (min-width: 481px) and (max-width: 768px) {
-//   .card {
-//     flex-direction: column;
-//   }
-// }
-
-// // Footer CSS
-
-// .app__footer {
-//   width: 100%;
-//   position: relative;
-//   z-index: 1;
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: center;
-//   flex-direction: column;
-//   background: var(--color-black);
-//   padding-top: 0;
-//   padding-bottom: 1rem;
-// }
-// .app__footer_links {
-//   width: 100%;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: flex-start;
-//   margin-top: 3rem;
-//   padding: 0 2rem;
-// }
-// .app__footer-links_logo {
-//   flex: 1;
-//   margin: 1;
-//   padding: 1rem;
-// }
-
-// .app__footer-links_icons {
-//   margin-top: 0.5rem;
-//   color: white;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: flex-start;
-//   font-size: 20px;
-// }
-
-// .footer__copyright {
-//   margin-top: 1rem;
-// }
-// @media screen and (max-width: 1150px) {
-//   .app__footer-links {
-//     align-items: center;
-//     flex-direction: column;
-//     padding: 0;
-//   }
-//   .app__footer-links_logo {
-//     margin: 1rem 0;
-//     width: 100%;
-//   }
-// }
-// @media screen and (max-width: 650px) {
-//   .app__footer {
-//     padding: 0 0 1rem 0;
-//   }
-// }
-// @media screen and (max-width: 350px) {
-//   .app__footer-links_logo Image:first-child {
-//     width: 80%;
-//   }
-// }
-
-// // services-page CSS
-
-// .services_page {
-//   display: flex;
-//   flex-direction: row;
-//   gap: 40px;
-//   flex-wrap: wrap;
-//   border: 2px white solid;
-//   width: 100%;
-//   justify-content: center;
-//   align-items: center;
-//   min-height: 50vh;
-// }
-
-// // About Us CSS
-
-// .about_us_list {
-//   display: flex;
-//   flex-direction: column;
-// }
-
-// // .app__aboutus-overlay {
-// //   position: absolute;
-// //   inset: 0;
-// // }
-
-// .flex__center {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
-
-// .app__aboutus-content {
-//   width: 100%;
-//   z-index: 2;
-// }
-// .app__aboutus-content_about {
-//   flex: 1;
-//   display: flex;
-//   justify-content: center;
-//   align-items: flex-start;
-//   flex-direction: column;
-//   text-align: left;
-// }
-// .headtext__cormorant {
-//   font-family: var(--font-base);
-//   color: var(--color-golden);
-//   line-height: 2px;
-//   letter-spacing: 0.04em;
-//   text-transform: capitalize;
-// }
-
-// .app__aboutus-content_history {
-//   flex: 1;
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: flex-start;
-//   flex-direction: column;
-//   text-align: left;
-// }
-
-// .app__aboutus-content_about p,
-// .app__aboutus-content_history p {
-//   margin: 2rem 0;
-//   color: whitesmoke;
-// }
-
-// @media screen and (max-width: 2000px) {
-//   .app__aboutus-content_about p,
-//   .app__aboutus-content_history p {
-//     margin: 4rem 0;
-//   }
-// }
-// @media screen and (max-width: 900px) {
-//   .app__aboutus-content {
-//     flex-direction: column;
-//   }
-// }
-
-// // Contact Us page CSS
 
 // // General/Additional (need to sort) CSS
 // main {
