--- a/styles/general.scss
+++ b/styles/general.scss
@@ -45,7 +45,8 @@ body::before {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
+  //background: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
+  background: rgba(0, 0, 0, 1);
   transition: 0.5s ease;
   text-shadow: 2px 2px 4px #000000;
 
@@ -75,7 +76,7 @@ body::before {
   color: whitesmoke;
   font-size: 2rem;
   text-align: center;
-  background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
+  //background-color: -webkit-linear-gradient(45deg, #f3ec78, #af4261);
 }
 
 .app__navbar-smallscreen_links li:hover {
